--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,55 @@
+@font-face {
+    font-family: 'league_gothiccondensed_italic';
+    src: url('leaguegothic-condenseditalic_0-webfont.eot');
+    src: url('leaguegothic-condenseditalic_0-webfont.eot?#iefix') format('embedded-opentype'),
+         url('leaguegothic-condenseditalic_0-webfont.woff2') format('woff2'),
+         url('leaguegothic-condenseditalic_0-webfont.woff') format('woff'),
+         url('leaguegothic-condenseditalic_0-webfont.ttf') format('truetype'),
+         url('leaguegothic-condenseditalic_0-webfont.svg#league_gothiccondensed_italic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'league_gothicCnRg';
+    src: url('leaguegothic-condensedregular_0-webfont.eot');
+    src: url('leaguegothic-condensedregular_0-webfont.eot?#iefix') format('embedded-opentype'),
+         url('leaguegothic-condensedregular_0-webfont.woff2') format('woff2'),
+         url('leaguegothic-condensedregular_0-webfont.woff') format('woff'),
+         url('leaguegothic-condensedregular_0-webfont.ttf') format('truetype'),
+         url('leaguegothic-condensedregular_0-webfont.svg#league_gothicCnRg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'league_gothicitalic';
+    src: url('leaguegothic-italic_0-webfont.eot');
+    src: url('leaguegothic-italic_0-webfont.eot?#iefix') format('embedded-opentype'),
+         url('leaguegothic-italic_0-webfont.woff2') format('woff2'),
+         url('leaguegothic-italic_0-webfont.woff') format('woff'),
+         url('leaguegothic-italic_0-webfont.ttf') format('truetype'),
+         url('leaguegothic-italic_0-webfont.svg#league_gothicitalic') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'league_gothicregular';
+    src: url('leaguegothic-regular_0-webfont.eot');
+    src: url('leaguegothic-regular_0-webfont.eot?#iefix') format('embedded-opentype'),
+         url('leaguegothic-regular_0-webfont.woff2') format('woff2'),
+         url('leaguegothic-regular_0-webfont.woff') format('woff'),
+         url('leaguegothic-regular_0-webfont.ttf') format('truetype'),
+         url('leaguegothic-regular_0-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 html, body {
     margin: 0;
     height:100%;
