--- a/css/style.css
+++ b/css/style.css
@@ -55,43 +55,85 @@ html, body {
     height:100%;
     width:100%;
     padding:0;
+    font-size: 14px;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Hind Madurai', sans-serif;
+  font-weight: bold;
+}
+
+.nb {
+  font-weight: 100;
+}
+
+.ltsp1 {
+  letter-spacing: 1px;
+} 
+
+.ltsp2 {
+  letter-spacing: 2px;
+} 
+
+.ltsp3 {
+  letter-spacing: 3px;
+} 
+
 section {
     display: block;
     background: #CFF;
-    height:100%;
+    height:inherit;
     width:100%;
     box-sizing:border-box;
+    padding: 6% 4%;
 }
 #one {
     background: #111816;
     color: #fff;
     font-size: 30px;
+    padding: 0;
 }
 #two {
-    background: #123037;
-    color: #fff;
-    font-size: 30px;
+    background: #FFF;
 }
 #three {
-    background: #74BE98;
-    font-size: 30px;
+    background: #0089DE;
+    padding-top: 15%;
 }
 #four {
     background: #BED28D;
-    font-size: 30px;
 }
 #five {
     background: #95211D;
-    color: #fff;
-    font-size: 30px;
 }
-nav {
+
+.cont-ocs {
+  margin-top: 170px;
+  position: relative;
+}
+
+.inner-cont-ocs {
+  position: absolute;
+  bottom: -255px;
+}
+
+.os1 {
+  line-height: 30px;
+  font-family: 'Hind Madurai', sans-serif;
+  font-size: 14px;
+  font-weight: 100;
+}
+
+.imopt1 img {
+  width: 90%;
+}
+
+nav.nav_cst {
     position: fixed;
     z-index: 1;
     width: 100%;
 }
-nav a {
+nav.nav_cst a {
     display: block;
     font-size: 12px;
     color: #FFF;
@@ -101,7 +143,7 @@ nav a {
     margin: 3px;
 }
 
-.scene,
+.scene_cst,
 .layer {
   display: block;
   height: 100%;
@@ -109,7 +151,7 @@ nav a {
   padding: 0;
   margin: 0; }
 
-.scene {
+.scene_cst {
   /*min-height: 300px;*/
   position: relative;
   overflow: hidden; }
@@ -150,15 +192,21 @@ img {
   height: 100%;
 }
 
-.sidenav .closebtn {
+.sidenav_cst .closebtn_cst {
     position: absolute;
     top: 0;
     right: 0;
     font-size: 36px;
     margin-right: 8px;
+    color: #000;
+    text-decoration: none;
 }
 
-.sidenav {
+.sidenav_cst .closebtn_cst:hover {    
+    color: #00AEEF;    
+}
+
+.sidenav_cst {
     height: 100%;
     width: 0;
     position: fixed;
@@ -168,13 +216,336 @@ img {
     background-color: #FFFFFF;
     overflow-x: hidden;
     transition: 0.5s;
-    padding-top: 60px;
+    padding-top: 40px;
 }
 
-.sidenav a {
+.sidenav_cst a {
   text-decoration: none;
 }
 
-#main {
+#main_cst {
     transition: margin-right .5s;    
+}
+
+div#maincontent {
+    outline: 0;
+}
+
+.navbar-nav.mzn_logo_cst {
+  padding-top: 25px;
+}
+
+.navbar-nav.social_header {
+  padding-top: 60px;
+}
+
+.navbar-nav.mzn_logo_cst li a:hover, .navbar-nav.social_header li a:hover, .navbar-nav.social_header li a:focus{
+  background: none;
+}
+
+.navbar-nav.social_header li:last-child a {
+  margin-left: 20px;
+  font-size: 22px;
+  position: relative;
+  top: -3px;
+  text-shadow:none;
+  padding-right: 0;
+}
+
+.navbar-nav.social_header li a {
+  color: #FFF;
+  font-size: 14px;
+  padding: 12px;
+}
+
+.navbar-nav.social_header li a:hover {
+  color: #FFF;
+}
+
+.mzn_logo_cst img {
+  width: 70%;
+}
+
+.layer .container.intro {
+  padding-top: 200px;
+  padding-bottom: 100px;
+}
+
+.intro-text h1 {
+  font-family: 'Hind Madurai', sans-serif;
+  font-size: 2em;
+  text-align: center;
+  font-weight: bold;
+  margin-bottom: 55px;
+}
+
+.cl-blue {
+  color: #00AEEF;
+}
+.cl-white {
+  color: #FFFFFF;
+}
+.cl-yellow {
+  color: #F9D855;
+}
+
+
+.opsans {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.cl-purple {
+  color: #061341;
+}
+
+.scroll_down img {
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.pa1 {
+    font-size: 3.3em;
+    line-height: 60px;
+    margin-top: 60px;
+    margin-bottom: 30px;
+}
+
+.os2 {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 28px;
+    margin-bottom: 0;
+}
+
+/*
+.line-arrow-down-center {
+    width: 52px;
+    margin: 0 auto;
+}
+
+.arrow-down {
+    height: 100px;
+    width: 2px;
+    background: #FFF;
+    display: block;
+    margin: auto;
+    margin-top: 24px;
+}
+
+.img-scroll-down {
+    position: absolute;
+    top: 22px;
+    right: 0;
+}*/
+
+.in_side {
+  padding-left: 50px;
+  padding-right: 20px;
+}
+
+.logo_side img {
+    width: 35%;
+    margin-bottom: 30px;
+}
+
+.logo_side {
+
+}
+
+ul.menu_side, ul.social_side {
+    list-style: none;
+    padding: 0;
+}
+
+ul.menu_side {
+  margin-bottom: 30px;
+}
+
+ul.menu_side li a{
+  font-family: 'Hind Madurai', sans-serif;
+  font-weight: 600;
+  color: #000000;
+  font-size: 18px;
+  text-decoration: none;
+  line-height: 34px;
+}
+
+ul.menu_side li a:hover {
+  color: #0089DE;
+}
+
+ul.social_side li {
+  float: left;
+  position: relative;
+}
+
+ul.social_side li a {
+  padding: 0 15px;
+  color: #000000;
+  font-size: 16px;
+}
+
+ul.social_side li a:hover {
+  color: #00AEEF;
+}
+
+ul.social_side li:first-child a {
+  padding-left: 0;
+}
+
+ul.social_side li:last-child a {
+  padding-right: 0;
+}
+
+.no-padding {
+   padding: 0 !important;   
+}
+
+.nopadding-left {
+   padding-left: 0 !important;
+}
+.line-v{
+  display: block;
+  height: 100px;
+  width: 1px;
+  background: #000000;
+  margin-bottom: 40px;
+}
+
+.line-h {
+  display: block;
+  height: 1px;
+  width: 80px;
+  background: #000000;
+  margin-top: 31px;
+}
+
+.container.v2 {
+    width: 970px;
+}
+
+.clean-cst {
+    float: left;
+    width: 100%;
+}
+
+h2.x32 {
+    font-size: 3.1em;
+    line-height: 40px; 
+}
+
+.clearfix {
+  clear: both;
+}
+
+.readmore {
+    border: 1px solid;
+    padding: 12px 35px;
+    margin-top: 30px;
+    font-size: 12px;
+    color: #061341;
+    display: inline-block;
+    cursor: pointer;
+}
+
+.readmore:hover {
+  text-decoration: none;
+  color:#FFFFFF;
+  background: #061341;
+}
+
+.readmore.cl-white {
+  color:#FFFFFF;
+}
+
+.readmore.cl-white:hover {
+  color:#0089DE;
+  border: 1px solid #FFFFFF;
+  background: #FFFFFF;
+}
+
+.cl1 {
+  background: #061341;
+}
+
+.cl2 {
+  background: #0D1D57;
+}
+
+.cl3 {
+  background: #182B70;
+}
+
+.inner-box {
+  color: #FFFFFF;
+  padding-top: 4%;
+  padding-bottom: 4%;
+  text-align: center;
+}
+
+.inner-box2 {
+  height: 320px;
+}
+
+.cl1 .inner-box2 {
+  border:1px solid #061341;
+}
+.cl2 .inner-box2 {
+  border:1px solid #0D1D57;
+}
+.cl3 .inner-box2 {
+  border:1px solid #182B70;
+}
+
+.inner-box2:hover {
+  border:1px solid #FFFFFF;
+}
+
+.numb {
+  font-size: 34px;
+  margin: 40px 0 30px;
+  display: block;
+  font-weight: 100;
+}
+
+.ttl {
+    font-size: 18px;
+    font-family: 'Hind Madurai', sans-serif;
+    font-weight: 100;
+    line-height: 26px;
+    margin-bottom: 14px;
+    display: block;
+    margin-top: 14px;
+}
+
+.inner-box .readmore {
+  color: #FFF;
+  border: 1px solid;
+  font-size: 12px;
+  font-family: 'Hind Madurai', sans-serif;
+}
+
+.inner-box .readmore:hover {
+  color: #061341;
+  border: 1px solid #FFF;
+  background: #FFF;
+}
+
+#three .container.v2 {
+    margin-top: 10%;
+}
+
+@media (max-width: 1200px) {
+
+}
+@media (max-width: 992px){
+  .container.v2 {
+      width: 970px;
+  }
+}
+@media (max-width: 768px){
+  .container.v2 {
+      width: 750px;
+  }
 }
